CON-1444 | Global Navigation temporary spacing fix

--- a/extensions/wikia/GlobalNavigation/css/GlobalNavigation.scss
+++ b/extensions/wikia/GlobalNavigation/css/GlobalNavigation.scss
@@ -23,6 +23,11 @@
 	position: relative;
 }
 
+// TODO temporary fix for menu spacing - remove when all components are ready
+.global-navigation-item:last-child {
+	width: 10px;
+}
+
 .global-navigation-link {
 	color: $nav-alternative-color;
 	display: table-cell;
